@@ -54,6 +54,10 @@ extern "C" {
 #include <string>    // std::string for Exception
 #include <exception> // std::exception
 
+// Helpers to check for explicit 'false' or 'true' return values.
+#define lua_isfalse(L,i) (lua_isboolean(L,i) && !lua_toboolean(L,i))
+#define lua_istrue(L,i)  (lua_isboolean(L,i) && lua_toboolean(L,i))
+
 struct DubUserdata {
   void *ptr;
   bool gc;
@@ -128,24 +132,31 @@ public:
 
   /** Push function 'name' found in <self> on the stack with <self> as
    * first argument.
+   *
+   * Constness is there to make it easy to implement callbacks like
+   * int rowCount() const, without requiring users to fiddle with constness
+   * which is not a notion part of Lua anyway.
    */
-  bool dub_pushcallback(const char *name);
+  bool dub_pushcallback(const char *name) const;
 
   /** Push any lua value from self on the stack.
    */
-  void dub_pushvalue(const char *name);
+  void dub_pushvalue(const char *name) const;
   
   /** Execute the protected call. If an error occurs, dub tries to find
    * an 'error' function in <self> and calls this function with the
    * error string. If no error function is found, the error message is
    * just printed out to stderr.
    */
-  bool dub_call(int param_count, int retval_count);
+  bool dub_call(int param_count, int retval_count) const;
 
-protected:
-  /** Lua thread that contains <self> on stack position 1.
+  /** Lua thread that contains <self> on stack position 1. This lua thread
+   * is public to ease object state manipulation from C++ (but stack *must
+   * not* be messed up).
    */
   lua_State *dub_L;
+
+protected:
   /** Type name (allows faster check for cast).
    */
   const char *dub_typename_;
